apps/oxlint/src/snapshots/fixtures__nested_config_-A no-console@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -A no-console
working directory: fixtures/nested_config
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[package2-no-config/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 2 errors.

Errors  Files
     1  debugger.js:1
     1  package2-no-config/debugger.js:1

Finished in <variable>ms on 7 files using 1 threads.
----------
CLI result: LintFoundErrors
----------
